# InkMarshal

./: .gitignore  .gitnexusignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  PRIVACY.md  README.md  README_zh-CN.md  SECURITY.md  THIRD_PARTY_NOTICES.md
docs/: README.md
novelcraft-ai/: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  components.json  eslint.config.mjs  knip.json  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  proxy.test.ts  proxy.ts  tsconfig.json  vitest-config.static.test.ts  vitest.config.ts
novelcraft-ai/src-tauri/: .gitignore  Cargo.toml  build.rs  dev-remote-capability.json  entitlements.plist  node-entitlements.plist  tauri.conf.json
novelcraft-ai/src-tauri/capabilities/: default.json
novelcraft-ai/src-tauri/engines/mlx-server/: HTTPServer.static.test.ts  Package.resolved  Package.swift
novelcraft-ai/src-tauri/engines/mlx-server/Sources/mlx-server/: HTTPServer.swift  MLXEngine.swift  OpenAI.swift  main.swift
novelcraft-ai/src-tauri/examples/: verify-updater-signature.rs
novelcraft-ai/src-tauri/fallback/: error.html  index.html
novelcraft-ai/src-tauri/icons/: icon.icns
novelcraft-ai/src-tauri/permissions/: default.toml  inference.toml  models.toml  secrets.toml  vault-write.toml
novelcraft-ai/src-tauri/src/: app_menu.rs  health.rs  http_util.rs  inkmarshal_home.rs  lib.rs  main.rs  metadata_db.rs  secret.rs
novelcraft-ai/src-tauri/src/engine/: budget.rs  commands.rs  log.rs  mod.rs  readiness.rs  registry.rs  spawn.rs
novelcraft-ai/src-tauri/src/model_manager/: huggingface.rs  local.rs  mod.rs  ollama.rs  paths.rs
novelcraft-ai/src-tauri/src/vault/: init.rs  io.rs  mod.rs  path.rs  platform.rs  walk.rs  watch.rs
scripts/: summarize-vercel-logs.mjs
spec/: DESIGN_RULES.md  ENGINEERING_RULES.md  (+4 more)
(+649 files in other folders)
