[package]
name = "inkmarshal-desktop"
version = "0.1.1"
description = "InkMarshal local-first writing studio"
authors = ["InkMarshal"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "inkmarshal-desktop"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "inkmarshal_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
url = "2.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
tokio = { version = "1", features = ["fs", "io-util"] }
sha2 = "0.10"
aes-gcm = "0.10"
base64 = "0.22"
minisign-verify = "0.2.5"
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
notify = "6"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
sys-locale = "0.3.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_JobObjects",
  "Win32_System_Threading",
] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service"] }
